user webiste routerlink

--- a/src/app/components/page/page-new/page-new.component.html
+++ b/src/app/components/page/page-new/page-new.component.html
@@ -15,9 +15,9 @@
             <div class="form-group">
                     <label for="title"><b>Title</b> </label>
                     <input class="form-control" id="Title" type="text" placeholder="Title of the new page">
-            </div>                    <a href="Page-List.html"class="btn btn-lg btn-warning">Cancel</a>
+            </div>               
+             <a href="Page-List.html"class="btn btn-lg btn-warning">Cancel</a>
             <a href="Page-List.html"class="btn btn-lg btn-success float-right">Submit</a>
-           </div>
         </form>
     </div>
 <!--Bottom page-->
