--- a/src/app/components/user/login/login.component.html
+++ b/src/app/components/user/login/login.component.html
@@ -8,9 +8,9 @@
   <div class="form-group">
       <input class="form-control" type="password" placeholder="password">
   </div> 
-  <a href="Profile.html" class="btn btn-primary btn-block">Login</a>
+  <a routerLink="/user/:uid" class="btn btn-primary btn-block">Login</a>
 
-  <a href="Register.html" class="btn btn-success btn-block">Register</a>
+  <a routerLink="/register" class="btn btn-success btn-block">Register</a>
   </form>
 
 </div>
