--- a/src/app/components/user/profile/profile.component.html
+++ b/src/app/components/user/profile/profile.component.html
@@ -1,7 +1,7 @@
  <!--Navbar -->
  <nav class="navbar navbar-dark bg-primary fixed-top">
-  <a class="navbar-brand" href="#"><b>Profile</b></a>
-  <a class="color-white" href="#"><i class="fas fa-check"></i></a> 
+  <a class="navbar-brand" routerLink="/user/:uid"><b>Profile</b></a>
+  <a class="color-white" routerLink="/user/:uid"><i class="fas fa-check"></i></a> 
 </nav>
 <!--form-->
 <div class="container">
@@ -31,13 +31,13 @@
         <input id="lastName" type="text" class="form-control" placeholder="last name">
      </div>
      <!--Adding 2 Buttons-->
-     <a href="../Website/website-List.html"class="btn btn-primary btn-block">websites</button>
-      <a href="Login.html" class="btn btn-danger btn-block">Logout</a>
+     <a routerLink="/user/:uid/website"class="btn btn-primary btn-block">websites</a>
+      <a routerLink="/login" class="btn btn-danger btn-block">Logout</a>
     </form>
     <div>
 <!--Footer-->
 <nav class="navbar navbar-dark bg-primary fixed-bottom">
  <div class="full-width" >
-     <a class="color-white float-right" href="#"><i class="fas fa-user"></i></a> 
+     <a class="color-white float-right" routerLink="/user/:uid"><i class="fas fa-user"></i></a> 
  </div>
 </nav>
