--- a/src/app/components/user/register/register.component.html
+++ b/src/app/components/user/register/register.component.html
@@ -10,8 +10,7 @@
   <div class = "form-group"> 
       <input class="form-control" type = "password" placeholder="verify password please...">
   </div>
-      <a href="Profile.html"class="btn btn-primary    btn-block">Register</button>
-      <a href="Login.html" class="btn btn-danger btn-block">cancel</a>
-
+      <a routerLink="/user/:uid"class="btn btn-primary btn-block">Register</a>
+      <a routerLink="/login" class="btn btn-danger btn-block">cancel</a>
   </form>
 </div>        
