--- a/src/app/components/page/page-list/page-list.component.html
+++ b/src/app/components/page/page-list/page-list.component.html
@@ -1,32 +1,32 @@
  <!--Navigation Bar-->
  <nav class="navbar navbar-light fixed-top bg-light">
-  <a class="color-red" href="../Website/website-List.html "><i class="fas fa-chevron-left"></i></a>
-  <a class="navbar-brand" href="Page-List.html padding-left">Pages</a>
-  <a class="color-red" href="Page-New.html"> <i class="fas fa-plus"></i></a>
+  <a class="color-red" routerLink="/user/:uid/website"><i class="fas fa-chevron-left"></i></a>
+  <a class="navbar-brand" routerLink="/user/:uid/website/:wid/page">Pages</a>
+  <a class="color-red" routerLink="/user/:uid/website/:wid/page/new"> <i class="fas fa-plus"></i></a>
 
   </nav>
 <!--Lists-->
 <div class="container-fluid">
 <ul class="list-group">
 <li class="list-group-item">
-<a href="../Widgets/widget-List.html">Blogging Post</a>
-<a class="float-right " href="Page-Edit.html"><i class="fas fa-cog"></i></a>
+<a routerLink="/user/:uid/website/:wid/page/:pid/widget">Blogging Post</a>
+<a class="float-right " routerLink="/user/:uid/website/:wid/page/:pid"><i class="fas fa-cog"></i></a>
 </li>
 <li class="list-group-item">
-<a href="../Widgets/widget-List.html">Blogs</a>
-<a class="float-right" href="Page-Edit.html"><i class="fas fa-cog"></i></a>
+<a href="/user/:uid/website/:wid/page/:pid/widget">Blogs</a>
+<a class="float-right" routerLink="/user/:uid/website/:wid/page/:pid"><i class="fas fa-cog"></i></a>
 </li>
 <li class="list-group-item">
-<a href="../Widgets/widget-List.html">Home</a>
-<a class="float-right" href="Page-Edit.html"><i class="fas fa-cog"></i></a>
+<a routerLink="/user/:uid/website/:wid/page/:pid/widget">Home</a>
+<a class="float-right" routerLink="/user/:uid/website/:wid/page/:pid"><i class="fas fa-cog"></i></a>
 </li>
 <li class="list-group-item">
-<a href="../Widgets/widget-List.html">About</a>
-<a class="float-right" href="Page-Edit.html"><i class="fas fa-cog"></i></a>
+<a routerLink="/user/:uid/website/:wid/page/:pid/widget">About</a>
+<a class="float-right" routerLink="/user/:uid/website/:wid/page/:pid"><i class="fas fa-cog"></i></a>
 </li>
 <li class="list-group-item">
-  <a href="../Widgets/widget-List.html">Contact Us</a>
-  <a class="float-right" href="Page-Edit.html"><i class="fas fa-cog"></i></a>
+  <a routerLink="/user/:uid/website/:wid/page/:pid/widget">Contact Us</a>
+  <a class="float-right" routerLink="/user/:uid/website/:wid/page/:pid"><i class="fas fa-cog"></i></a>
 </li>
 
 </ul>
@@ -34,6 +34,6 @@
 <!--Footer-->
 <nav class="navbar navbar-light fixed-bottom bg-light">
 <div class="full-width" >
-<a class="color-red float-right" href="../User/Profile.html"><i class="fas fa-user"></i></a> 
+<a class="color-red float-right" routerLink="/user/:uid"><i class="fas fa-user"></i></a> 
 </div>
 </nav>
