--- a/src/app/components/page/page-new/page-new.component.html
+++ b/src/app/components/page/page-new/page-new.component.html
@@ -1,8 +1,8 @@
    <!--Navigation Bar-->
    <nav class="navbar navbar-light fixed-top bg-light">
-    <a class="color-red" href="Page-List.html "><i class="fas fa-chevron-left"></i></a>
-    <a class="navbar-brand padding.left" href="Page-New.html">New Page</a>
-    <a class="color-red" href="Page-List.html"> <i class="fas fa-check"></i></a>
+    <a class="color-red" routerLink="/user/:uid/website/:wid/page "><i class="fas fa-chevron-left"></i></a>
+    <a class="navbar-brand padding-left" routerLink="/user/:uid/website/:wid/page/:pid">New Page</a>
+    <a class="color-red" routerLink="/user/:uid/website/:wid/page"> <i class="fas fa-check"></i></a>
 
     </nav>
     <!--New page form-->
@@ -16,13 +16,13 @@
                     <label for="title"><b>Title</b> </label>
                     <input class="form-control" id="Title" type="text" placeholder="Title of the new page">
             </div>               
-             <a href="Page-List.html"class="btn btn-lg btn-warning">Cancel</a>
-            <a href="Page-List.html"class="btn btn-lg btn-success float-right">Submit</a>
+             <a routerLink="/user/:uid/website/:wid/page"class="btn btn-lg btn-warning">Cancel</a>
+            <a routerLink="/user/:uid/website/:wid/page"class="btn btn-lg btn-success float-right">Submit</a>
         </form>
     </div>
 <!--Bottom page-->
 <nav class="navbar navbar-light fixed-bottom bg-light">
     <div class="full-width" >
-        <a class="color-red float-right" href="../User/Profile.html"><i class="fas fa-user"></i></a> 
+        <a class="color-red float-right" routerLink="/user/:uid"><i class="fas fa-user"></i></a> 
     </div>
   </nav>
