--- a/src/app/components/widget/widget-chooser/widget-chooser.component.html
+++ b/src/app/components/widget/widget-chooser/widget-chooser.component.html
@@ -1,38 +1,28 @@
    <!--Navigation bar-->
    <nav class="navbar navbar-light fixed-top bg-light">
-    <a class="color-red" href="Widget-List.html"><i class="fas fa-chevron-left"></i></a>
-    <a class="navbar-brand padding-left" href="Page-List.html">Choose Widget</a>
+    <a class="color-red" routerLink="/user/:uid/website/:wid/page/:pid/widget"><i class="fas fa-chevron-left"></i></a>
+    <a class="navbar-brand padding-left" routerLink="/user/:uid/website/:wid/page/:pid/widget/new">Choose Widget</a>
     
     </nav>
     <!--List of item for widget chooser-->
     <div class="container">
         <ul class="list-group-flush">
-            <li class="list-group-item"> 
-        <a href="Widget-Heading.html">Header</a></li>
-        <li class="list-group-item"> 
-        <a href="#">Label</a></li>
-        <li class="list-group-item"> 
-             <a href="#">HTML</a></li>
-             <li class="list-group-item"> 
-       <a href="#">Text Input</a></li>
-        <li class="list-group-item"> 
-           <a href="#">Link</a></li>
-             <li class="list-group-item"> 
-            <a href="#">Button</a></li>
-            <li class="list-group-item"> 
-            <a href="Widget-Image.html">Image</a></li>
-            <li class="list-group-item"> 
-        <a href="Widget-Youtube.html">Youtube</a></li>
-        <li class="list-group-item"> 
-            <a href="#">Data Table</a></li>
-            <li class="list-group-item"> 
-                    <a href="#">Repeater</a></li>                     
+<li class="list-group-item"><a routerLink="/user/:uid/website/:wid/page/:pid/widget/:wgid">Header</a></li>
+    <li class="list-group-item"> <a routerLink="/user/:uid/website/:wid/page/:pid/widget/:wgid">Label</a></li>
+       <li class="list-group-item"> <a routerLinkf="/user/:uid/website/:wid/page/:pid/widget/:wgid">HTML</a></li>
+        <li class="list-group-item"> <a routerLink="/user/:uid/website/:wid/page/:pid/widget/:wgid">Text Input</a></li>
+         <li class="list-group-item"> <a routerLink="/user/:uid/website/:wid/page/:pid/widget/:wgid">Link</a></li>
+<li class="list-group-item"><a routerLink="/user/:uid/website/:wid/page/:pid/widget/:wgid">Button</a></li>
+<li class="list-group-item"><a routerLink="/user/:uid/website/:wid/page/:pid/widget/:wgid">Image</a></li>
+<li class="list-group-item"><a routerLink="/user/:uid/website/:wid/page/:pid/widget/:wgid">Youtube</a></li>
+<li class="list-group-item"><a routerLink="/user/:uid/website/:wid/page/:pid/widget/:wgid">Data Table</a></li>
+<li class="list-group-item"><a routerLink="/user/:uid/website/:wid/page/:pid/widget/:wgid">Repeater</a></li>                     
         </ul>
 
     </div>
  <!--Bottom Navigation Bar and Icon -->
 <nav class="navbar navbar-light fixed-bottom bg-light">
     <div class="full-width" >
-        <a class="color-red float-right" href=""><i class="fas fa-user"></i></a> 
+        <a class="color-red float-right" routerLink="/user/:uid"><i class="fas fa-user"></i></a> 
     </div>
   </nav>
