--- a/src/app/components/widget/widget-edit/widget-heading/widget-heading.component.html
+++ b/src/app/components/widget/widget-edit/widget-heading/widget-heading.component.html
@@ -1,8 +1,8 @@
    <!--Navigation bar-->
    <nav class="navbar navbar-light fixed-top bg-light">
-    <a class="color-red" href="Widget-List.html"><i class="fas fa-chevron-left"></i></a>
-    <a class="navbar-brand" href="Widget-Heading.html "> Edit Widget</a>
-    <a class="float-right color-red" href="Widget-List.html"><i class="fas fa-check"></i></a>  
+    <a class="color-red" routerLink="/user/:uid/website/:wid/page/:pid/widget"><i class="fas fa-chevron-left"></i></a>
+    <a class="navbar-brand" routerLink="/user/:uid/website/:wid/page/:pid/widget/:wgid"> Edit Widget</a>
+    <a class="float-right color-red" routerLink="/user/:uid/website/:wid/page/:pid/widget"><i class="fas fa-check"></i></a>  
 </nav>
 <!--List on the middle of the  edit widget-->
 <div class="container"> 
@@ -22,13 +22,13 @@
                     <input type="number" id="size" class="form-control">
                 </div>
     
-            <a href="Widget-List.html" class="btn btn-danger btn-block" > Delete</a>
+            <a routerLink="/user/:uid/website/:wid/page/:pid/widget" class="btn btn-danger btn-block" > Delete</a>
     </form>
 </div>
    
  <!--Bottom Navigation Bar and Icon -->
 <nav class="navbar navbar-light fixed-bottom bg-light">
     <div class="full-width" >
-        <a class="color-red float-right" href="../User/Profile.html"><i class="fas fa-user"></i></a> 
+        <a class="color-red float-right" routerLink="/user/:uid"><i class="fas fa-user"></i></a> 
     </div>
   </nav>
