--- a/src/app/components/user/profile/profile.component.html
+++ b/src/app/components/user/profile/profile.component.html
@@ -1,34 +1,34 @@
  <!--Navbar -->
  <nav class="navbar navbar-dark bg-primary fixed-top">
-  <a class="navbar-brand" routerLink="/user/:uid"><b>Profile</b></a>
-  <a class="color-white" routerLink="/user/:uid"><i class="fas fa-check"></i></a> 
+  <a class="navbar-brand" routerLink="/user/{{uid}}"><b>Profile</b></a>
+  <button [disabled] = "myForm.invalid" class="btn bg-transparent color-white" type ="submit" form = "myForm"><i class="fas fa-check"></i></button> 
 </nav>
 <!--form-->
 <div class="container">
-<form>
+<form #myForm = "ngForm" (ngSubmit)= "update()" id = "myForm">
+    <div *ngIf = "userError"class = "alert.alert-danger"> This username is already taken. Try another username</div>
+    <div *ngIf = "successFlag"class = "alert.alert-success"> Update successfully</div>
    <!--Username-->
     <div class="form-group"> 
         <label for="username"><b>Username</b></label>
-
-        <input id="username" type ="text"class="form-control" placeholder="username">
+        <input #userInput = "ngModel" type ="text"class="form-control" [(ngModel)] = "user.Username"  required name= "username" placeholder="Username....">
     </div>
+    <div *ngIf = "userInput.invalid"class = "alert.alert-warning"> Username can't be empty</div>
      <!--Email Address-->
      <div class="form-group">
            <label for="email"><b>Email Address</b></label>
-
-           <input id="email"type="email" class="form-control" placeholder="email address">
+           <input id="email"type="email" class="form-control"  [(ngModel)] = "user.email" name= "email" placeholder="Email Address...">
       </div>
      <!--First Name-->
     <div class ="form-group">
           <label for="firstName"><b>First Name</b></label>
 
-          <input id="firstName" type="text" class="form-control" placeholder="first name">
+          <input id="firstName" type="text" class="form-control"  [(ngModel)] = "user.firstName" name = "firstName" placeholder="First Name....">
     </div>
      <!--Last Name-->
      <div class="form-group">
           <label for="lastName"><b>Last Name</b></label>
-          
-        <input id="lastName" type="text" class="form-control" placeholder="last name">
+        <input id="lastName" type="text" class="form-control"  name = "user.lastName"placeholder="Last Name...">
      </div>
      <!--Adding 2 Buttons-->
      <a routerLink="/user/:uid/website"class="btn btn-primary btn-block">websites</a>
@@ -38,6 +38,6 @@
 <!--Footer-->
 <nav class="navbar navbar-dark bg-primary fixed-bottom">
  <div class="full-width" >
-     <a class="color-white float-right" routerLink="/user/:uid"><i class="fas fa-user"></i></a> 
+     <a class="color-white float-right" routerLink="/user/{{uid}}"><i class="fas fa-user"></i></a> 
  </div>
 </nav>
