--- a/src/app/components/user/profile/profile.component.html
+++ b/src/app/components/user/profile/profile.component.html
@@ -31,7 +31,7 @@
         <input id="lastName" type="text" class="form-control"  name = "user.lastName"placeholder="Last Name...">
      </div>
      <!--Adding 2 Buttons-->
-     <a routerLink="/user/:uid/website"class="btn btn-primary btn-block">websites</a>
+     <a routerLink="/user/{{uid}}/website"class="btn btn-primary btn-block">websites</a>
       <a routerLink="/login" class="btn btn-danger btn-block">Logout</a>
     </form>
     <div>
