--- a/src/app/components/website/website-edit/website-edit.component.html
+++ b/src/app/components/website/website-edit/website-edit.component.html
@@ -2,15 +2,15 @@
 <nav class="navbar  navbar-dark bg-primary fixed-top row nav-height">
   <!-- Left Navigation Panel-->
   <div class="col-4 d-none d-sm-block">
-  <a class="color-white" routerLink="/user/:uid/website"><i class="fas fa-chevron-left"></i></a>
-  <a class="color-white padding-left" routerLink="/user/:uid/website/:wid"><h5 class="display-inline">Websites</h5></a>
-      <a class="color-white float-right" routerLink="/user/:uid/website/new"> <i class="fas fa-plus"></i></a>
+  <a class="color-white" routerLink="/user/{{uid}}/website"><i class="fas fa-chevron-left"></i></a>
+  <a class="color-white padding-left" routerLink="/user/{{uid}}/website/{{wid}}"><h5 class="display-inline">Websites</h5></a>
+      <a class="color-white float-right" routerLink="/user/{{uid}}/website/new"> <i class="fas fa-plus"></i></a>
   </div>
       <!--Right Navigation Panel-->
   <div class="col-sm-8">
-        <a class="color-white d-sm-none" routerLink="/user/:uid/website"><i class="fas fa-chevron-left"></i></a>
-      <a class="color-white  padding-left" routerLink="/user/:uid/website/:wid"><h5 class="display-inline">Edit Website</h5></a>
-              <a class="color-white float-right" routerLink="/user/:uid/website"><i class="fas fa-check"></i></a> 
+        <a class="color-white d-sm-none" routerLink="/user/{{uid}}/website"><i class="fas fa-chevron-left"></i></a>
+      <a class="color-white  padding-left" routerLink="/user/{{uid}}/website/:wid"><h5 class="display-inline">Edit Website</h5></a>
+            <button class="color-white float-right btn bg-transparent" form = "myForm"><i class="fas fa-check"> </i> </button> 
   </div>
   </nav>
   <!--List & Form-->
@@ -19,34 +19,27 @@
   <div class="col-4 d-none d-sm-block">
   <div class="container-fluid">   
   <ul class="list-group">
-  <li class="list-group-item"> <a routerLink="/user/:uid/website/:wid/page"> Address Book App</a> 
-  <a class="float-right"routerLink="/user/:uid/website/:wid"><i class="fas fa-cog"></i></a>
-      </li>
-            <li class="list-group-item"> <a routerLink="/user/:uid/website/:wid/page"> Blogger </a>
-          <a class="float-right" routerLink="/user/:uid/website/:wid"><i class="fas fa-cog"></i></a></li>
-               <li class="list-group-item"><a href="/user/:uid/website/:wid/page"> Blogging App </a>
-         <a class="float-right" routerLink="/user/:uid/website/:wid"><i class="fas fa-cog"></i></a>
-             </li>
-          <li class="list-group-item"><a routerLink="/user/:uid/website/:wid/page"> Script Testing App </a>
-            <a class="float-right" routerLink="/user/:uid/website/:wid"><i class="fas fa-cog"></i></a>
-         </li>
-             </ul>
-               </div>
-                 </div>
+  <li class="list-group-item" *ngFor = "let website of websites"> 
+      <a routerLink="/user/{{uid}}/website/{{wid}}/page"> {{website.name}}</a> 
+  <a class="float-right"routerLink="/user/{{uid}}/website/{{website._id}}"><i class="fas fa-cog"></i></a>
+            </li>
+        </ul>
+    </div>
+ </div>
   <!-- rigt panel form-->
   <div class="col-sm-8">
   <div class="container-fluid">
-    <form>
+    <form id = "myForm" #myForm = "ngForm" (ngSubmit) = "update()">
     <div class="form-group">
         <label for="name"><b> Name</b></label>
-              <input id="name" class="form-control" type="text" placeholder="Name" value="Blogger">
+              <input [(ngModel)] = "name" name = "name" id="name" class="form-control" type="text" placeholder="Name" [(ngModel)]= "website.name" value="Blogger">
   </div>
   <div class="form-group">
       <label for="description"> <b>Description</b></label>
-      <textarea id="description"rows="5" class="form-control"type="text" placeholder="Description of your website">Many people think that Jehovah’s Witnesses is the name of a new religion. However, over 2,700 years ago, the servants of the only true God were described as his “witnesses.” (Isaiah 43:10-12) Until 1931, we were known as Bible Students. Why did we adopt the name Jehovah’s Witnesses?</textarea>
+      <textarea [(ngModel)]= "website.description" name = "description" id="description"rows="5" class="form-control"type="text" placeholder="Description of your website"></textarea>
   </div> 
-  <a routerLink="/user/:uid/website"class="btn btn-lg btn-warning">Cancel</a>
-  <a routerLink="/user/:uid/website"class="btn btn-lg btn-danger float-right">Delete</a>
+  <a routerLink="/user/{{uid}}/website"class="btn btn-lg btn-warning">Cancel</a>
+  <button type = "button" (click) = "delete()"class="btn btn-lg btn-danger float-right">Delete</button>
   </form>
     </div>
       </div>
@@ -54,6 +47,6 @@
   <!--Footer-->
   <nav class="navbar navbar-dark bg-primary fixed-bottom">
         <div class="full-width" >
-            <a class="color-white float-right"routerLink="/user/:uid"><i class="fas fa-user"></i></a> 
+            <a class="color-white float-right"routerLink="/user/{{uid}}"><i class="fas fa-user"></i></a> 
         </div>
       </nav>         
