--- a/src/app/components/website/website-new/website-new.component.html
+++ b/src/app/components/website/website-new/website-new.component.html
@@ -2,15 +2,15 @@
 <nav class="navbar navbar-dark bg-primary fixed-top row navbar-height">
   <!-- Left Navigation Panel-->
   <div class="col-4 d-none d-sm-block">
-  <a class="color-white" routerLink="/user/:uid/website"><i class="fas fa-chevron-left"></i></a>
-      <a class="color-white padding-left" routerLink="/user/:uid/website/new"><h5 class="display-inline">Websites</h5></a>
-              <a class="color-white float-right" routerLink="/user/:uid/website/new"> <i class="fas fa-plus"></i></a>
+  <a class="color-white" routerLink="/user/{{uid}}/website"><i class="fas fa-chevron-left"></i></a>
+      <a class="color-white padding-left" routerLink="/user/{{uid}}/website/new"><h5 class="display-inline">Websites</h5></a>
+              <a class="color-white float-right" routerLink="/user/{{uid}}/website/new"> <i class="fas fa-plus"></i></a>
   </div>
               <!--Right Navigation Panel-->
-      <div class="col-sm-8">
-              <a class="color-white d-sm-none" routerLink="/user/:uid/website"><i class="fas fa-chevron-left"></i></a>
-     <a class="color-white  padding-left" routerLink="/user/:uid/website/new"><h5 class="display-inline">New Website</h5></a>
-                      <a class="color-white float-right" routerLink="/user/:uid/website"><i class="fas fa-check"></i></a> 
+      <div class="col-sm-8" >
+              <a class="color-white d-sm-none" routerLink="/user/{{uid}}/website"><i class="fas fa-chevron-left"></i></a>
+     <a class="color-white  padding-left" routerLink="/user/{{uid}}/website/new"><h5 class="display-inline">New Website</h5></a>
+                      <button [disabled] = "myForm.invalid" type = "submit" form ="myForm" class="color-white float-right btn bg-transparent" routerLink="/user/{{uid}}/website"><i class="fas fa-check"></i></button> 
           </div>
   </nav>
           <!--List & Form-->
@@ -20,38 +20,27 @@
           <div class="col-4 d-none d-sm-block">
   <div class="container-fluid">   
           <ul class="list-group">
-                      <li class="list-group-item"> 
-                          <a routerLink="/user/:uid/website/:wid/page"> Address Book App</a> 
-                          <a class="float-right" routerLink="/user/:uid/website/:wid"><i class="fas fa-cog"></i></a>
-                              </li>
-                  <li class="list-group-item"> 
-                <a routerLink="/user/:uid/website/:wid/page"> Blogger </a>
-         <a class="float-right" routerLink="/user/:uid/website/:wid"><i class="fas fa-cog"></i></a></li>
-         <li class="list-group-item">
-             <a routerLink="/user/:uid/website/:wid/page"> Blogging App </a>
-             <a class="float-right" routerLink="/user/:uid/website/:wid"><i class="fas fa-cog"></i></a>
-                      </li>
-        <li class="list-group-item">
-            <a routerLink="/user/:uid/website/:wid/page"> Script Testing App </a>
-         <a class="float-right" routerLink="/user/:uid/website/:wid"><i class="fas fa-cog"></i></a>
-         </li>
-              </ul>
+                      <li class="list-group-item" *ngFor = "let website of Websites"> 
+                          <a routerLink="/user/{{uid}}/website/{{website._id}}/page"> {{website.name}}</a> 
+                          <a class="float-right" routerLink="/user/{{uid}}/website/{{website._id}}"><i class="fas fa-cog"></i></a>
+                              </li> 
+                         </ul>
                   </div>
           </div>
           <!-- rigt panel form-->
           <div class="col-sm-8">
               <div class="container-fluid">
-              <form>
+              <form id = "myForm" #myForm = "ngForm"  (ngSubmit)= "createWebsite()">
               <div class="form-group">
                   <label for="name"><b> Name</b></label>
-                      <input id="name" class="form-control" type="text" placeholder="Name">
+                      <input [(ngModel)] = "name" name = "name" id="name" required name = "name" class="form-control" type="text" placeholder="Name">
               </div>
               <div class="form-group">
                   <label for="description"> <b>Description</b></label>
-                  <textarea id="description"rows="10" class="form-control"type="text" placeholder="Description of your website"></textarea>
+                  <textarea [(ngModel)] = "description" name = "description" id="description"rows="10" class="form-control"type="text" placeholder="Description of your website"></textarea>
               </div> 
-              <a routerLink="/user/:uid/website"class="btn btn-lg btn-warning">Cancel</a>
-              <a routerLink="/user/:uid/website"class="btn btn-lg btn-success float-right">Submit</a>
+              <a routerLink="/user/{{uid}}/website"class="btn btn-lg btn-warning">Cancel</a>
+              <button class="btn btn-lg btn-success float-right">  Submit </button> <!-- [disabled]="myForm.invalid"-->
               </form>
           </div>
        </div>
@@ -59,7 +48,7 @@
   <!--Footer-->
   <nav class="navbar navbar-dark bg-primary fixed-bottom">
       <div class="full-width" >
-          <a class="color-white float-right" routerLink="/user/:uid"><i class="fas fa-user"></i></a> 
+          <a class="color-white float-right" routerLink="/user/{{uid}}"><i class="fas fa-user"></i></a> 
       </div>
       </nav>
   
