Add pages functions

--- a/src/app/components/page/page-edit/page-edit.component.html
+++ b/src/app/components/page/page-edit/page-edit.component.html
@@ -1,29 +1,29 @@
  <!--Navigation Bar-->
  <nav class="navbar navbar-light fixed-top bg-light">
-  <a class="color-red" routerLink ="/user/:uid/website/:wid/page">
+  <a class="color-red" routerLink ="/user/{{uid}}/website/{{wid}}/page">
     <i class="fas fa-chevron-left"></i></a>
-  <a class="navbar-brand" routerLink ="/user/:uid/website/:wid/page/:pid padding-left">Edit page</a>
-  <a class="color-red"routerLink ="/user/:uid/website/:wid/page"> <i class="fas fa-check"></i></a>
+  <a class="navbar-brand" routerLink ="/user/{{uid}}/website/{{wid}}/page/{{pid}} padding-left">Edit page</a>
+  <button from = "myForm"class="color-red btn bg-transparent" type = "submit" [disable] = "myForm.invalid"> <i class="fas fa-check"></i></button>
 
   </nav>
   <!--New page form-->
   <div class="container">
-      <form>
+      <form id= "myForm" #myForm = "ngForm" (ngSubmit) = "update()">
           <div class="form-group">
               <label for ="name"><b>Name</b> </label>
-              <input class="form-control" id="name" type="text" placeholder="Name of the blog post" value="Blog Post">
+              <input class="form-control" id="name" type="text" placeholder ="Name of the blog post" required  name = "name" [(ngModel)] = "page.name">
           </div>
           <div class="form-group">
                   <label for="title"><b>Title</b> </label>
-                  <input class="form-control" id="Title" type="text" placeholder="Title of the new page" value="Blog Post">
+                  <input class="form-control" id="Title" type="text" placeholder="Title of the new page" name = "title" [(ngModel)] = "page.title">
           </div>                    
-          <a routerLink ="/user/:uid/website/:wid/page"class="btn btn-lg btn-warning">Cancel</a>
-          <a routerLink ="/user/:uid/website/:wid/page"class="btn btn-lg btn-danger float-right">Delete</a>
+          <a routerLink ="/user/{{uid}}/website/{{wid}}/page"class="btn btn-lg btn-warning">Cancel</a>
+          <button type = "button" (click) = "delete()" class="btn btn-lg btn-danger float-right">Delete</button>
       </form>
   </div>
 <!--Bottom page-->
 <nav class="navbar navbar-light fixed-bottom bg-light">
   <div class="full-width" >
-      <a class="color-red float-right" routerLink="user/:uid"><i class="fas fa-user"></i></a> 
+      <a class="color-red float-right" routerLink="user/{{uid}}"><i class="fas fa-user"></i></a> 
   </div>
 </nav>
