--- a/src/app/components/page/page-list/page-list.component.html
+++ b/src/app/components/page/page-list/page-list.component.html
@@ -1,39 +1,22 @@
  <!--Navigation Bar-->
  <nav class="navbar navbar-light fixed-top bg-light">
-  <a class="color-red" routerLink="/user/:uid/website"><i class="fas fa-chevron-left"></i></a>
-  <a class="navbar-brand" routerLink="/user/:uid/website/:wid/page">Pages</a>
-  <a class="color-red" routerLink="/user/:uid/website/:wid/page/new"> <i class="fas fa-plus"></i></a>
+  <a class="color-red" routerLink="/user/{{uid}}/website"><i class="fas fa-chevron-left"></i></a>
+  <a class="navbar-brand" routerLink="/user/{{uid}}/website/{{wid}}/page">Pages</a>
+  <a class="color-red" routerLink="/user/{{uid}}/website/{{wid}}/page/new"> <i class="fas fa-plus"></i></a>
 
   </nav>
 <!--Lists-->
 <div class="container-fluid">
 <ul class="list-group">
-<li class="list-group-item">
-<a routerLink="/user/:uid/website/:wid/page/:pid/widget">Blogging Post</a>
-<a class="float-right " routerLink="/user/:uid/website/:wid/page/:pid"><i class="fas fa-cog"></i></a>
+<li class="list-group-item" *ngFor = "let page of pages">
+<a routerLink="/user/{{uid}}/website/{{wid}}/page/{{page._id}}/widget">{{page.name}}</a>
+<a class="float-right " routerLink="/user/{{uid}}/website/{{wid}}/page/{{page._id}}"><i class="fas fa-cog"></i></a>
 </li>
-<li class="list-group-item">
-<a href="/user/:uid/website/:wid/page/:pid/widget">Blogs</a>
-<a class="float-right" routerLink="/user/:uid/website/:wid/page/:pid"><i class="fas fa-cog"></i></a>
-</li>
-<li class="list-group-item">
-<a routerLink="/user/:uid/website/:wid/page/:pid/widget">Home</a>
-<a class="float-right" routerLink="/user/:uid/website/:wid/page/:pid"><i class="fas fa-cog"></i></a>
-</li>
-<li class="list-group-item">
-<a routerLink="/user/:uid/website/:wid/page/:pid/widget">About</a>
-<a class="float-right" routerLink="/user/:uid/website/:wid/page/:pid"><i class="fas fa-cog"></i></a>
-</li>
-<li class="list-group-item">
-  <a routerLink="/user/:uid/website/:wid/page/:pid/widget">Contact Us</a>
-  <a class="float-right" routerLink="/user/:uid/website/:wid/page/:pid"><i class="fas fa-cog"></i></a>
-</li>
-
 </ul>
 </div>
 <!--Footer-->
 <nav class="navbar navbar-light fixed-bottom bg-light">
 <div class="full-width" >
-<a class="color-red float-right" routerLink="/user/:uid"><i class="fas fa-user"></i></a> 
+<a class="color-red float-right" routerLink="/user/{{uid}}"><i class="fas fa-user"></i></a> 
 </div>
 </nav>
