--- a/src/app/components/page/page-new/page-new.component.html
+++ b/src/app/components/page/page-new/page-new.component.html
@@ -1,28 +1,27 @@
    <!--Navigation Bar-->
    <nav class="navbar navbar-light fixed-top bg-light">
-    <a class="color-red" routerLink="/user/:uid/website/:wid/page "><i class="fas fa-chevron-left"></i></a>
-    <a class="navbar-brand padding-left" routerLink="/user/:uid/website/:wid/page/:pid">New Page</a>
-    <a class="color-red" routerLink="/user/:uid/website/:wid/page"> <i class="fas fa-check"></i></a>
-
+    <a class="color-red" routerLink="/user/{{uid}}/website/{{wid}}/page "><i class="fas fa-chevron-left"></i></a>
+    <a class="navbar-brand padding-left" routerLink="/user/{{uid}}/website/{{wid}}/page/:pid">New Page</a>
+    <button  [disabled] = "myForm.invalid" class="color-red btn bg-transparent" form = "myForm" type = "submit"> <i class="fas fa-check"></i></button>
     </nav>
     <!--New page form-->
     <div class="container">
-        <form>
+        <form id ="myForm" #myForm="ngForm" (ngSubmit) = "createPage()">
             <div class="form-group">
                 <label for ="name"><b>Name</b> </label>
-                <input class="form-control" id="name" type="text" placeholder="Name of the new page">
+                <input required name= "name" [(ngModel)] = "name" class="form-control" id="name" type="text" placeholder="Name of the new page">
             </div>
             <div class="form-group">
                     <label for="title"><b>Title</b> </label>
-                    <input class="form-control" id="Title" type="text" placeholder="Title of the new page">
+                    <input name = "title" [(ngModel)] = "title" class="form-control" id="Title" type="text" placeholder="Title of the new page">
             </div>               
-             <a routerLink="/user/:uid/website/:wid/page"class="btn btn-lg btn-warning">Cancel</a>
-            <a routerLink="/user/:uid/website/:wid/page"class="btn btn-lg btn-success float-right">Submit</a>
+             <a routerLink="/user/{{uid}}/website/{{wid}}/page"class="btn btn-lg btn-warning">Cancel</a>
+            <button type = "submit" [disabled] = "myForm.invalid" class="btn btn-lg btn-success float-right">Submit</button>
         </form>
     </div>
 <!--Bottom page-->
 <nav class="navbar navbar-light fixed-bottom bg-light">
     <div class="full-width" >
-        <a class="color-red float-right" routerLink="/user/:uid"><i class="fas fa-user"></i></a> 
+        <a class="color-red float-right" routerLink="/user/{{uid}}"><i class="fas fa-user"></i></a> 
     </div>
   </nav>
