--- a/src/app/components/widget/widget-edit/widget-heading/widget-heading.component.html
+++ b/src/app/components/widget/widget-edit/widget-heading/widget-heading.component.html
@@ -1,34 +1,34 @@
    <!--Navigation bar-->
    <nav class="navbar navbar-light fixed-top bg-light">
-    <a class="color-red" routerLink="/user/:uid/website/:wid/page/:pid/widget"><i class="fas fa-chevron-left"></i></a>
-    <a class="navbar-brand" routerLink="/user/:uid/website/:wid/page/:pid/widget/:wgid"> Edit Widget</a>
-    <a class="float-right color-red" routerLink="/user/:uid/website/:wid/page/:pid/widget"><i class="fas fa-check"></i></a>  
+    <a class="color-red" routerLink="/user/{{uid}}/website/{{wid}}/page/{{pid}}/widget"><i class="fas fa-chevron-left"></i></a>
+    <a class="navbar-brand" routerLink="/user/{{uid}}/website/{{wid}}/page/{{pid}}/widget/{{wgid}}"> Edit Widget</a>
+    <button form= "myForm" [disabled] ="" class="float-right color-red btn bg-transparent" ><i class="fas fa-check"></i></button>  
 </nav>
 <!--List on the middle of the  edit widget-->
 <div class="container"> 
-    <form>
+    <form id = "myForm" #myForm = "ngForm" (ngSubmit)= "update ()">
         <div clas="form-group">
     <label for="name"> <b>Name</b></label>
-    <input type="text" id="name" class="form-control">
+    <input palceholder = "Widget Name" name = "name" [(ngModel)]= "widget.name" type="text" id="name" class="form-control">
         </div>
         <!--Text for the main page-->
-        <div clas="form-group">
+        <div class="form-group">
                 <label for="text"> <b>Text</b></label>
-                <input type="text" id="name" class="form-control">
+                <input  palceholder = "Widget Text" name = "text" [(ngModel)]= "widget.text"type="text" id="text" class="form-control">
             </div>
             <!--Size for the main page-->
             <div class="form-group">
                     <label for="size"> <b>Size</b></label>
-                    <input type="number" id="size" class="form-control">
+                    <input name = "size" [(ngModel)]= "widget.size" type="number" id="size" class="form-control">
                 </div>
     
-            <a routerLink="/user/:uid/website/:wid/page/:pid/widget" class="btn btn-danger btn-block" > Delete</a>
+            <button type = "button" (click) = "delete()" class="btn btn-danger btn-block" > Delete</button>
     </form>
 </div>
    
  <!--Bottom Navigation Bar and Icon -->
 <nav class="navbar navbar-light fixed-bottom bg-light">
     <div class="full-width" >
-        <a class="color-red float-right" routerLink="/user/:uid"><i class="fas fa-user"></i></a> 
+        <a class="color-red float-right" routerLink="/user/{{uid}}"><i class="fas fa-user"></i></a> 
     </div>
   </nav>
