rearraange a couple forms and fixing bugs

--- a/src/app/components/page/page-edit/page-edit.component.html
+++ b/src/app/components/page/page-edit/page-edit.component.html
@@ -3,7 +3,7 @@
   <a class="color-red" routerLink ="/user/{{uid}}/website/{{wid}}/page">
     <i class="fas fa-chevron-left"></i></a>
   <a class="navbar-brand" routerLink ="/user/{{uid}}/website/{{wid}}/page/{{pid}} padding-left">Edit page</a>
-  <button from = "myForm"class="color-red btn bg-transparent" type = "submit" [disable] = "myForm.invalid"> <i class="fas fa-check"></i></button>
+  <button form = "myForm"class="color-red btn bg-transparent" type = "submit" [disable] = "myForm.invalid"> <i class="fas fa-check"></i></button>
 
   </nav>
   <!--New page form-->
