--- a/src/app/components/widget/widget-edit/widget-heading/widget-heading.component.html
+++ b/src/app/components/widget/widget-edit/widget-heading/widget-heading.component.html
@@ -7,7 +7,7 @@
 <!--List on the middle of the  edit widget-->
 <div class="container"> 
     <form id = "myForm" #myForm = "ngForm" (ngSubmit)= "update ()">
-        <div clas="form-group">
+        <div class="form-group">
     <label for="name"> <b>Name</b></label>
     <input palceholder = "Widget Name" name = "name" [(ngModel)]= "widget.name" type="text" id="name" class="form-control">
         </div>
