fixing link on fas fa-check

--- a/src/app/components/website/website-edit/website-edit.component.html
+++ b/src/app/components/website/website-edit/website-edit.component.html
@@ -1,5 +1,5 @@
 <!--Navbar-->
-<nav class="navbar  navbar-dark bg-primary fixed-top row nav-height">
+<nav class="navbar navbar-dark bg-primary fixed-top row nav-height">
   <!-- Left Navigation Panel-->
   <div class="col-4 d-none d-sm-block">
   <a class="color-white" routerLink="/user/{{uid}}/website"><i class="fas fa-chevron-left"></i></a>
@@ -9,7 +9,7 @@
       <!--Right Navigation Panel-->
   <div class="col-sm-8">
         <a class="color-white d-sm-none" routerLink="/user/{{uid}}/website"><i class="fas fa-chevron-left"></i></a>
-      <a class="color-white  padding-left" routerLink="/user/{{uid}}/website/:wid"><h5 class="display-inline">Edit Website</h5></a>
+      <a class="color-white  padding-left" routerLink="/user/{{uid}}/website/{{wid}}"><h5 class="display-inline">Edit Website</h5></a>
             <button class="color-white float-right btn bg-transparent" form = "myForm"><i class="fas fa-check"> </i> </button> 
   </div>
   </nav>
@@ -32,11 +32,11 @@
     <form id = "myForm" #myForm = "ngForm" (ngSubmit) = "update()">
     <div class="form-group">
         <label for="name"><b> Name</b></label>
-              <input [(ngModel)] = "name" name = "name" id="name" class="form-control" type="text" placeholder="Name" [(ngModel)]= "website.name" value="Blogger">
+              <input [(ngModel)] = "name" name = "name" id ="name" class="form-control" type="text" placeholder="Name" [(ngModel)]= "website.name" > <!-- value="Blogger"-->
   </div>
   <div class="form-group">
       <label for="description"> <b>Description</b></label>
-      <textarea [(ngModel)]= "website.description" name = "description" id="description"rows="5" class="form-control"type="text" placeholder="Description of your website"></textarea>
+      <textarea [(ngModel)]= "website.description" name = "description" id="description"rows="5" class="form-control" type="text" placeholder="Description of your website"></textarea>
   </div> 
   <a routerLink="/user/{{uid}}/website"class="btn btn-lg btn-warning">Cancel</a>
   <button type = "button" (click) = "delete()" class="btn btn-lg btn-danger float-right">Delete</button>
