--- a/src/app/components/website/website-new/website-new.component.html
+++ b/src/app/components/website/website-new/website-new.component.html
@@ -10,7 +10,7 @@
       <div class="col-sm-8" >
               <a class="color-white d-sm-none" routerLink="/user/{{uid}}/website"><i class="fas fa-chevron-left"></i></a>
      <a class="color-white  padding-left" routerLink="/user/{{uid}}/website/new"><h5 class="display-inline">New Website</h5></a>
-                      <button [disabled] = "myForm.invalid" type = "submit" form ="myForm" class="color-white float-right btn bg-transparent" routerLink="/user/{{uid}}/website"><i class="fas fa-check"></i></button> 
+    <button  type = "submit" [disabled] = "myForm.invalid" form ="myForm" class="color-white float-right btn bg-transparent" routerLink="/user/{{uid}}/website/new"><i class="fas fa-check"></i></button> 
           </div>
   </nav>
           <!--List & Form-->
