--- a/src/app/components/website/website-new/website-new.component.html
+++ b/src/app/components/website/website-new/website-new.component.html
@@ -20,7 +20,7 @@
           <div class="col-4 d-none d-sm-block">
   <div class="container-fluid">   
           <ul class="list-group">
-                      <li class="list-group-item" *ngFor = "let website of Websites"> 
+                      <li class="list-group-item" *ngFor = "let website of websites"> 
                           <a routerLink="/user/{{uid}}/website/{{website._id}}/page"> {{website.name}}</a> 
                           <a class="float-right" routerLink="/user/{{uid}}/website/{{website._id}}"><i class="fas fa-cog"></i></a>
                               </li> 
