--- a/src/app/components/page/page-edit/page-edit.component.html
+++ b/src/app/components/page/page-edit/page-edit.component.html
@@ -22,8 +22,8 @@
       </form>
   </div>
 <!--Bottom page-->
-<nav class="navbar navbar-light fixed-bottom bg-light">
+<footer class="navbar navbar-light fixed-bottom bg-light">
   <div class="full-width" >
       <a class="color-red float-right" routerLink="user/{{uid}}"><i class="fas fa-user"></i></a> 
   </div>
-</nav>
+</footer>
