--- a/src/app/components/page/page-list/page-list.component.html
+++ b/src/app/components/page/page-list/page-list.component.html
@@ -15,8 +15,8 @@
 </ul>
 </div>
 <!--Footer-->
-<nav class="navbar navbar-light fixed-bottom bg-light">
+<footer class="navbar navbar-light fixed-bottom bg-light">
 <div class="full-width" >
-<a class="color-red float-right" routerLink="/user/{{uid}}"><i class="fas fa-user"></i></a> 
+  <a class="color-red float-right" routerLink="/user/{{uid}}"> <i class="fas fa-user"></i></a>
 </div>
-</nav>
+</footer>
