--- a/src/app/components/widget/widget-edit/widget-youtube/widget-youtube.component.html
+++ b/src/app/components/widget/widget-edit/widget-youtube/widget-youtube.component.html
@@ -21,8 +21,8 @@
         </div>
            
          <!--Bottom Navigation Bar and Icon -->
-      <nav class="navbar navbar-light fixed-bottom bg-light">
+      <footer class="navbar navbar-light fixed-bottom bg-light">
             <div class="full-width" >
                 <a class="color-red float-right" routerLink="/user/{{uid}}"><i class="fas fa-user"></i></a> 
             </div>
-          </nav>
+        </footer>
