--- a/src/app/components/widget/widget-list/widget-list.component.html
+++ b/src/app/components/widget/widget-list/widget-list.component.html
@@ -1,8 +1,8 @@
  <!--Navigation bar-->
  <nav class="navbar navbar-light fixed-top bg-light">
   <a class="color-red" routerLink="/user/{{uid}}/website/{{wid}}/page"><i class="fas fa-chevron-left"></i></a>
-  <a class="color-black padding-left" routerLink="user/{{uid}}/website/{{wid}}/page/{{pid}}/widget"><b class="font-lg">Widgets</b></a>
-  <a class="color-red icon-right" routerLink="user/{{uid}}/website/{{wid}}/page/{{pid}}/widget/new"><i  class="fas fa-plus"></i></a>
+  <a class="color-black padding-left" routerLink="/user/{{uid}}/website/{{wid}}/page/{{pid}}/widget"><b class="font-lg">Widgets</b></a>
+  <a class = "color-red icon-right" routerLink="/user/{{uid}}/website/{{wid}}/page/{{pid}}/widget/new"><i  class="fas fa-plus"></i></a>
   </nav>
 <!--Middle page Main Contents-->
 <div class="container-fluid">
@@ -10,8 +10,8 @@
        <div *ngFor = "let widget of widgets">
              <!--Icons-->
              <div class="absolute-right">
-          <a routerLink="user/{{uid}}/website/{{wid}}/page/{{pid}}/widget/{{widget._id}}"> <i class="fas fa-cog"></i></a>
-          <a routerLink="user/{{uid}}/website/{{wid}}/page/{{pid}}/widget"> <i class="fas fa-bars"></i></a>
+          <a routerLink="/user/{{uid}}/website/{{wid}}/page/{{pid}}/widget/{{widget._id}}"> <i class="fas fa-cog"></i></a>
+          <a routerLink="/user/{{uid}}/website/{{wid}}/page/{{pid}}/widget"> <i class="fas fa-bars"></i></a>
              </div>
              <!--Contents-->
              <div [(ngSwitch)] = "widget.widgetType">
@@ -50,6 +50,6 @@
 <!--Bottom Navigation Bar Footer-->
 <nav class="navbar navbar-light fixed-bottom bg-light">
   <div class="full-width" >
-      <a class="color-red float-right" routerLink="user/{{uid}}"><i class="fas fa-user"></i></a> 
+      <a class="color-red float-right" routerLink="/user/{{uid}}"><i class="fas fa-user"></i></a> 
   </div>
 </nav>
