--- a/src/app/components/widget/widget-list/widget-list.component.html
+++ b/src/app/components/widget/widget-list/widget-list.component.html
@@ -38,19 +38,19 @@
         </div>
       </div>
       <div *ngSwitchCase = "'IMAGE'" > 
-        <img [src] ="widget.url" [style.width] = "widget.width">
+        <img [src]="widget.url" [style.width]= "widget.width"/>
       </div> 
-      <div *ngSwitchCase = "'YOUTUBE'" > 
-        <div class = "embed-responsive embed-responsive-16by9">       
-          <iframe [src]="parseYoutubeSource(widget.url)" [style.width] = "widget.width" allowfullscreen></iframe>
+      <div *ngSwitchCase="'YOUTUBE'" > 
+        <div class="embed-responsive embed-responsive-16by9">       
+          <iframe [src]="parseYoutubeSource(widget.url)" [style.width]="widget.width" allowfullscreen></iframe>
         </div>
       </div> 
     </div>
   </div>
 </div>
 <!--Bottom Navigation Bar Footer-->
-<nav class="navbar navbar-light fixed-bottom bg-light">
-  <div class="full-width" >
+<footer class="navbar navbar-light fixed-bottom bg-light">
+  <div class="full-width">
     <a class="color-red float-right" routerLink="/profile"><i class="fas fa-user"></i></a> 
   </div>
-</nav>
+</footer>
