--- a/src/app/components/widget/widget-edit/widget-image/widget-image.component.html
+++ b/src/app/components/widget/widget-edit/widget-image/widget-image.component.html
@@ -1,31 +1,32 @@
     <!--Navigation bar-->
     <nav class=" navbar navbar-light fixed-top bg-light">
       <a class="color-red" routerLink="/user/{{uid}}/website/{{wid}}/page/{{pid}}/widget"><i class="fas fa-chevron-left"></i></a>
-      <a class="navbar-brand" routerLink="/user/{{uid}}/website/{{wid}}page/{{pid}}/widget/{{wgid}}"> Edit Widget</a>
-      <button class="float-right color-red btn bg-transparent"  form ="myForm" (click)= "update()"><i class="fas fa-check"></i></button>
+      <a class="navbar-brand" routerLink="/user/:uid/website/{{wid}}page/{{pid}}/widget/{{wgid}}"> Edit Widget</a>
+      <button class="float-right color-red btn bg-transparent" type ="submit" form ="myForm" (click)= "update()"><i class="fas fa-check"></i></button>
       
   </nav>
   <!--List on the middle of  edit widget-->
   <div class="container"> 
-      <form id = "myForm" #myForm = "ngForm" (ngSubmit) = "update()">
+      <form id="myForm" #myForm="ngForm" (ngSubmit)="update()">
            <!--URL for the main page-->
               <div class="form-group">
                       <label for="url"> <b>URL</b></label>
-                      <input name = "url" placeholder = "Image Url" [(ngModel)] = "widget.url"  type="text" id="url" class="form-control">
+                      <input name= "url" placeholder="Image Url"
+                       [(ngModel)]="widget.url" name="url"  type="text" id="url" class="form-control"/>
                   </div>
                    <!--Width for the main page-->
               <div class="form-group">
                       <label for="width"> <b>Width</b></label>
-                      <input name = "width" placeholder = "Image Width" [(ngModel)] = "widget.width"  type="text" id="width" class="form-control">
+                      <input name ="width" placeholder="Image Width" [(ngModel)]="widget.width"  type="text" id="width" class="form-control"/>
                   </div>
       
-              <button type = "button" (click) = "delete ()" class="btn btn-danger btn-block" > Delete</button>
+              <button type="button" (click)="delete ()" class="btn btn-danger btn-block"> Delete</button>
       </form>
   </div>
      
    <!--Bottom Navigation Bar and Icon -->
 <footer class="navbar navbar-light fixed-bottom bg-light">
       <div class="full-width" >
-          <a class="color-red float-right" routerLink="/profile}"><i class="fas fa-user"></i></a> 
+          <a class="color-red float-right" routerLink="/profile"><i class="fas fa-user"></i></a> 
       </div>
     </footer>
