removed head comment on g widget edit image

--- a/src/app/components/widget/widget-edit/widget-heading/widget-heading.component.html
+++ b/src/app/components/widget/widget-edit/widget-heading/widget-heading.component.html
@@ -6,19 +6,19 @@
 </nav>
 <!--List on the middle of the  edit widget-->
 <div class="container"> 
-    <form id = "myForm" #myForm = "ngForm" (ngSubmit)= "update ()">
+    <form id="myForm" #myForm = "ngForm" (ngSubmit)= "update()">
         <!--Text for the main page-->
         <div class="form-group">
                 <label for="text"> <b>Text</b></label>
-                <input name = "text" [(ngModel)]= "widget.text" type="text"  palceholder = "Widget Text"  id="text" class="form-control">
+                <input name= "text" [(ngModel)]= "widget.text" type="text"  palceholder="Widget Text"  id="text" class="form-control"/>
             </div>
             <!--Size for the main page-->
             <div class="form-group">
                     <label for="size"> <b>Size</b></label>
-                    <input name = "size" [(ngModel)]= "widget.size" type="number" id="size" class="form-control" />
+                    <input name="size" [(ngModel)]="widget.size" type="number" id="size" class="form-control"/>
                 </div>
     
-            <button type = "button" (click) = "delete()" class="btn btn-danger btn-block" > Delete</button>
+            <button type="button" (click)="delete()" class="btn btn-danger btn-block" > Delete</button>
     </form>
 </div>
    
